css/home.css
@keyframes fadein
{
	from{ opacity: 0}
	to {opacity: 1}
	
}


nav
{
	display:inline-block;
	background-color:rgba(125,125,125,0.33);
	margin: 0;
	padding: 0;
	width: 100%;
}


nav ul li
{
	left: 500px;
	color: gray;
	list-style: none;
	text-align: center;
	display:inline-block;
}

body
{
	font-family: 'Roboto';
	font-size: 22px;
	background-color:rgba(0,0,0,0.85);
	background-image:url(./img/frontend1.jpg);
	background-repeat: no-repeat;
	background-size: 100% 100%;
	background-attachment: fixed;
	animation: fadein 2s;

}

.main-container
{
	background-color:rgba(0,0,0,0.35);
	height:1000px;
	width:100%;
}


.flavortext
{
	display: inline-block;
	
	margin-left: 15%;
	margin-top: 25%;
	color: white;
	font-size: 42px;

}

footer{
	color: white;
	background-color:rgba(45,45,45,0.66);
	background-position:center;
	
	padding-bottom: 80px;
	margin-bottom: -80px;
	
}

footer img
{
	height: 5%;
	width: 5%;
	display:flex;
	justify-content:center;
}

.download-links
{
	display:grid;
	margin-left:220px;
	margin-top:100px;
	grid-template-columns: 5fr 5fr;
	grid-gap:100px;
}


.github-button
{

	padding: 15px 85px 10px 20px;
	color: #FFFFFF;
	text-decoration: none;
	font-size: 20px;
	font-weight: bold;
	background: #33A700 url('http://i.imgur.com/wt7UJ.png') no-repeat 92% 50%;
	border: 2px solid #339410;
	box-shadow: 3px 3px 5px #000000;
	border-radius: 5px;
	transition: 350ms;
}

.page-button
{
	
	
	padding: 15px 80px 10px 60px;
	color: rgba(0,0,0,1);
	text-decoration: none;
	font-size: 20px;
	font-weight: bold;
	background: #ffffff;
	border: 2px solid #555555;
	box-shadow: 2px 2px 5px #000000;
	border-radius: 5px;
	transition: 350ms;
}

.steamwidget
{
	margin-left: 25%;
	margin-top: 10%;
}

.host, .writtenin
{
	font-size:16px;
	display:flex;
	justify-content:center;
}

.host a
{
	text-decoration:none;
	color:white;
}

